# sorbit

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  knope.toml  rustfmt.toml  sonar-project.properties
.changeset/: add_derivation_of_packinto_and_unpackfrom_for_enumerations.md  add_feature_to_specify_constant_expression_for_the_value_of_a_struct_field.md  added_fielded_catch_all_variants.md  added_len_and_byte_count_attributes_to_store_collection_size_explicitly.md  added_serialization_of_phantomdata_support_for_value_transforms.md  added_serialization_of_u128_and_i128.md  added_support_for_fields_in_enum_variants.md  fix_compilation_issue_using_default_instead_of_from0_to_create_zeroes_for_phantomdata_byte_count_fields.md  implemented_serialization_of_basic_types.md  significant_and_breaking_api_changes_to_serializer_and_deserializer.md
.github/workflows/: build_and_test.yml  doc.yml  release.yml  rustfmt.yml  sonarqube.yml
serde_binfmt/: Cargo.toml
serde_binfmt/src/: bit_field.rs  bit_pack.rs  bit_util.rs  byte_order.rs  error.rs  lib.rs  serialize.rs  serializer.rs
serde_binfmt/src/bit/: bit_field.rs  bit_pack.rs  mod.rs
serde_binfmt/src/deserialize/: deserialize.rs  deserializer.rs  mod.rs  stream_deserializer.rs
serde_binfmt/src/io/: byte_stream.rs  fixed_byte_stream.rs  fixed_memory_stream.rs  growing_memory_stream.rs  mod.rs  partial_stream.rs  traits.rs
serde_binfmt/src/serialize/: buffer_serializer.rs  mod.rs  serialize.rs  serializer.rs  stream_serializer.rs
serde_binfmt/src/standard_types/: integer.rs
serde_binfmt/src/types/: integer.rs  mod.rs  sequence.rs
serde_binfmt/tests/: test.rs
serde_binfmt_macros/: Cargo.toml
sorbit/: Cargo.toml
sorbit/src/: byte_order.rs  codegen.rs  collection.rs  error.rs  lib.rs  sized.rs
sorbit/src/bit/: bit_field.rs  bit_pack.rs  bit_util.rs  error.rs  mod.rs
sorbit/src/deserialize/: deserialize.rs  deserializer.rs  mod.rs  stream_deserializer.rs
sorbit/src/io/: basic_stream.rs  bounded_section.rs  fixed_memory_stream.rs  growing_memory_stream.rs  mod.rs  partial_stream.rs  stream.rs  stream_section.rs
sorbit/src/ser_de/: byte_conv.rs  deserialize.rs  deserializer.rs  mod.rs  serialize.rs  serializer.rs
sorbit/src/serialize/: mod.rs  serialize.rs  serializer.rs  stream_serializer.rs
sorbit/src/stream_ser_de/: context.rs  mod.rs  stream_deserializer.rs  stream_serializer.rs
sorbit/src/types/: array.rs  boolean.rs  char.rs  float.rs  integer.rs  mod.rs  phantom_data.rs  reference.rs  sequence.rs  tuple.rs
sorbit/tests/: .gitignore  coverage.rs  test.rs  utility.rs
sorbit/tests/derive/: ipv4_header.rs  mod.rs  struct.rs
sorbit/tests/derive/enum/: bit_pack.rs  byte_order.rs  catch_all.rs  discriminant.rs  fielded_enum.rs  mod.rs
sorbit/tests/derive/struct/: bit_fields.rs  bit_numbering.rs  collection.rs  collection_by_byte_count.rs  collection_by_length.rs  constant_field.rs  empty.rs  field_byte_order.rs  field_layout.rs  generics.rs  mod.rs  phantom_field.rs  struct_byte_order.rs  struct_layout.rs  struct_multi_pass.rs  tuple_struct.rs
sorbit/tests/manual/: ipv4_header.rs  ipv4_header_gen.rs  mod.rs  scsi_inquiry.rs
sorbit_derive/: Cargo.toml  README.md
sorbit_derive/src/: lib.rs
sorbit_derive_impl/: Cargo.toml  README.md
sorbit_derive_impl/src/: attribute.rs  derive_object.rs  derive_struct.rs  lib.rs  parse_utils.rs  shared.rs  utility.rs
sorbit_derive_impl/src/derive_struct/: binary_field.rs  bit_field.rs  bit_field_attribute.rs  direct_field.rs  direct_field_attribute.rs  field_utils.rs  mod.rs  packed_field.rs  packed_field_attribute.rs  source_field.rs  struct.rs  struct_attribute.rs
sorbit_derive_impl/src/enum/: mod.rs
sorbit_derive_impl/src/enum/ast/: enum.rs  mod.rs  variant.rs
sorbit_derive_impl/src/enum/parse/: enum.rs  mod.rs  variant.rs
sorbit_derive_impl/src/hir/: ast.rs  build.rs  mod.rs
sorbit_derive_impl/src/ir/: algorithm.rs  attribute.rs  build.rs  constants.rs  dag.rs  dag_v2.rs  mod.rs  nodes.rs  operation.rs  ops.rs  pattern_match.rs  region.rs  value.rs
sorbit_derive_impl/src/ir/nodes/: constants.rs  debug.rs  lower.rs
sorbit_derive_impl/src/ir/ops/: bit_field.rs  language.rs  mod.rs  serialization.rs  trait_impl.rs
sorbit_derive_impl/src/ir/ops_v2/: language.rs  serialization.rs  trait_impl.rs
sorbit_derive_impl/src/ir_de/: build.rs  mod.rs  nodes.rs
sorbit_derive_impl/src/ir_se/: mod.rs  nodes.rs
sorbit_derive_impl/src/ops/: algorithm.rs  bit_field.rs  collection.rs  constants.rs  language.rs  mod.rs  serialization.rs  trait_impl.rs
sorbit_derive_impl/src/ssa_ir/: ir.rs  mod.rs  ops.rs
sorbit_derive_impl/src/struct/: mod.rs
sorbit_derive_impl/src/struct/ast/: conversion.rs  field.rs  field_group.rs  lowering.rs  mod.rs  struct.rs
sorbit_derive_impl/src/struct/parse/: field.rs  mod.rs  struct.rs  utility.rs
