[workspace]
resolver = "2"
members = ["serde_binfmt", "serde_binfmt_macros"]

# [patch.crates-io]
# serde_binfmt = { path = "serde_binfmt" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.106", default-features = false }
