[workspace]
resolver = "2"
members = ["sorbit", "sorbit_derive", "sorbit_derive_impl"]

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
sorbit_derive = { path = "sorbit_derive", version = "0.1.1" }
sorbit_derive_impl = { path = "sorbit_derive_impl", version = "0.1.1" }
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.106", features = ["extra-traits", "full"] }
num = { version = "0.4.3", default-features = false }
itertools = "0.14.0"
textwrap = "0.16.2"
rstest = { version = "0.26.1" }
runtime-macros ={ version = "1.1.1"}
