[package]
name = "sorbit"
version.workspace = true
edition.workspace = true

license = "MIT"
description = "A serialization framework to define bit-accurate binary formats."
homepage = "https://github.com/petiaccja/sorbit"
repository = "https://github.com/petiaccja/sorbit"
readme = "../README.md"
keywords = ["binary", "serialization", "layout", "bitfield"]
categories = ["encoding"]

[features]
alloc = []
std = ["alloc"]
default = ["std"]

[dependencies]
sorbit_derive.workspace = true
num.workspace = true

[dev-dependencies]
sorbit_derive_impl.workspace = true
rstest.workspace = true
runtime-macros.workspace = true
proc-macro2.workspace = true
syn = { version = "2.0.38", default-features = false, features = [
    "parsing",
    "printing",
    "full",
] }
