[package]
name = "sorbit_derive"
version = "0.1.0"
edition = "2024"

license = "MIT"
description = "The derive macros for the sorbit serialization framework."
homepage = "https://github.com/petiaccja/sorbit"
repository = "https://github.com/petiaccja/sorbit"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
sorbit_derive_impl = { version = "=0.1.0", path = "../sorbit_derive_impl" }
proc-macro2 = "1.0.101"
syn = "2.0.106"
