[package]
name = "sorbit_derive"
version.workspace = true
edition.workspace = true

license = "MIT"
description = "The derive macros for the sorbit serialization framework."
homepage = "https://github.com/petiaccja/sorbit"
repository = "https://github.com/petiaccja/sorbit"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
sorbit_derive_impl.workspace = true
proc-macro2.workspace = true
syn.workspace = true
