[package]
name = "sorbit_derive_impl"
version.workspace = true
edition.workspace = true

license = "MIT"
description = "The derive macros for the sorbit serialization framework."
homepage = "https://github.com/petiaccja/sorbit"
repository = "https://github.com/petiaccja/sorbit"
readme = "README.md"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
itertools.workspace = true
petgraph.workspace = true
textwrap.workspace = true
rstest.workspace = true
